# learning_api_requests

./: POETRY_WORKFLOW.md  README.md  pyproject.toml
src/api_requests/: __init__.py  main.py
tests/: test_api_requests.py
