[tool.poetry]
name = "api-requests"
version = "0.1.2-alpha.1"
description = ""
authors = ["mariomui <yi.kan.mui@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
